# schmargs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargo-readme.yml  readme.yml  rust.yml
playground/: Cargo.toml
playground/src/: main.rs
schmargs/: Cargo.toml
schmargs-derive/: Cargo.toml
schmargs-derive/src/: derive_impl.rs  lib.rs  utils.rs
schmargs-derive/tests/: nostd.rs  test.rs
schmargs/src/: error.rs  field.rs  lib.rs  schmargs.rs  utils.rs  wrappers.rs
schmargs/tests/: test.rs
