[package]
name = "schmargs-derive"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Property404/schmargs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
schmargs = { path = "../schmargs" }

