[package]
name = "schmargs"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Property404/schmargs"
edition = "2021"

[lints.rust]
missing_docs = "warn"

[dependencies]
schmargs-derive = { version = "0.0.0", path = "../schmargs-derive" }

[features]
default = ["std"]
std = []
